--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html>
+
 <head>
+  <base href="./">
   <meta charset="utf-8">
-  <title>InsApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Insurance</title>
+
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="">
+  <div class="splash-screen">
+    <div class="splash-loader-container">
+      <svg class="splash-loader" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+        <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+      </svg>
+    </div>
+  </div>
 </body>
+
 </html>
