--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Insurance</title>
+  <title>VCIPL</title>
 
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/4.2.95/css/materialdesignicons.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
